<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LightTheme"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:background="@color/whiteColor"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/error_message_view"/>

            <TextView
                android:id="@+id/tv_popup_title"
                style="@style/tvHeading"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_feedback"
                android:textColor="@color/colorGreen"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/et_alert_feedback"
                style="@style/EditText"
                android:background="@drawable/bg_edittext_border"
                android:gravity="start"
                android:layout_margin="@dimen/horizontal_margin"
                android:hint="@string/enter_your_feedback_here"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="10"
                android:textColorHint="@color/colorHint" />

            <include layout="@layout/button_progress_rounded" />

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/vertical_margin_half"
        android:background="@color/colorTransparent"
        android:padding="@dimen/vertical_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_cancel"
        android:tint="@color/blackColor"
        android:contentDescription="@string/button"
        android:layout_alignParentEnd="true" />


</RelativeLayout>